<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewmodel"
            type="one.block.recenteosblocks.ui.detail.BlockDetailViewModel" />
        <variable
            name="block"
            type="one.block.recenteosblocks.data.db.entities.Block" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="15dp"
        tools:context=".ui.detail.BlockDetailActivity">

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier"
            app:barrierDirection="right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="block_id_label, block_number_label,
            block_producer_label, block_timestamp_label, block_confirmed_label,
            block_previous_label,block_transaction_mroot_label, block_action_mroot_label,
            block_schedule_version_label, block_ref_block_prefix_label"/>

        <TextView
            android:id="@+id/block_id_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/block_number_label"
            android:padding="10dp"
            android:text="@string/block_id"/>

        <TextView
            android:id="@+id/block_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/barrier"
            app:layout_constraintTop_toTopOf="@id/block_id_label"
            android:padding="10dp"
            android:text="@{block.id}"/>

        <TextView
            android:id="@+id/block_number_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/block_id"
            android:padding="10dp"
            android:text="@string/block_number"/>

        <TextView
            android:id="@+id/block_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/barrier"
            app:layout_constraintTop_toBottomOf="@id/block_id"
            android:padding="10dp"
            android:text="@{block.blockNum}"/>

        <TextView
            android:id="@+id/block_producer_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/block_number"
            android:padding="10dp"
            android:text="@string/block_producer"/>

        <TextView
            android:id="@+id/block_producer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/barrier"
            app:layout_constraintTop_toBottomOf="@id/block_number"
            android:padding="10dp"
            android:text="@{block.producer}"/>

        <TextView
            android:id="@+id/block_timestamp_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/block_producer"
            android:padding="10dp"
            android:text="@string/timestamp"/>

        <TextView
            android:id="@+id/block_timestamp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/barrier"
            app:layout_constraintTop_toBottomOf="@id/block_producer"
            android:padding="10dp"
            android:text="@{block.timestamp}"/>

        <TextView
            android:id="@+id/block_confirmed_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/block_timestamp"
            android:padding="10dp"
            android:text="@string/confirmed"/>

        <TextView
            android:id="@+id/block_confirmed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/barrier"
            app:layout_constraintTop_toBottomOf="@id/block_timestamp"
            android:padding="10dp"
            android:text="@{block.confirmed}"/>

        <TextView
            android:id="@+id/block_previous_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/block_confirmed"
            android:padding="10dp"
            android:text="@string/previous"/>

        <TextView
            android:id="@+id/block_previous"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/barrier"
            app:layout_constraintTop_toBottomOf="@id/block_confirmed"
            android:padding="10dp"
            android:text="@{block.previous}"/>

        <TextView
            android:id="@+id/block_transaction_mroot_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/block_previous"
            android:padding="10dp"
            android:text="@string/transaction_mroot"/>
        <TextView
            android:id="@+id/block_transaction_mroot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/barrier"
            app:layout_constraintTop_toBottomOf="@id/block_previous"
            android:padding="10dp"
            android:text="@{block.transactionMroot}"/>

        <TextView
            android:id="@+id/block_action_mroot_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/block_transaction_mroot"
            android:padding="10dp"
            android:text="@string/action_mroot"/>

        <TextView
            android:id="@+id/block_action_mroot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/barrier"
            app:layout_constraintTop_toBottomOf="@id/block_transaction_mroot"
            android:padding="10dp"
            android:text="@{block.actionMroot}"/>

        <TextView
            android:id="@+id/block_schedule_version_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/block_action_mroot"
            android:padding="10dp"
            android:text="@string/schedule_version"/>

        <TextView
            android:id="@+id/block_schedule_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/barrier"
            app:layout_constraintTop_toBottomOf="@id/block_action_mroot"
            android:padding="10dp"
            android:text="@{block.scheduleVersion}"/>

        <TextView
            android:id="@+id/block_ref_block_prefix_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/block_schedule_version"
            android:padding="10dp"
            android:text="@string/ref_block_prefix"/>

        <TextView
            android:id="@+id/block_ref_block_prefix"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/barrier"
            app:layout_constraintTop_toBottomOf="@id/block_schedule_version"
            android:padding="10dp"
            android:text="@{block.scheduleVersion}"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>